--- a/_config.yml
+++ b/_config.yml
@@ -22,3 +22,20 @@ version:          1.0.0
 
 github:
   repo:           https://github.com/poole/lanyon
+
+prose:
+  rooturl: '_posts'
+  siteurl: 'http://noahschmitz.github.io/'
+  media: 'media'
+  metadata:
+    _posts:
+      - name: "layout"
+        field:
+          element: "hidden"
+          value: "post"
+      - name: "title"
+        field:
+          element: "text"
+          label: "Title"
+          placeholder: "Title"
+          value: ""
