--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ permalink:        pretty
 # Setup
 title:            'Of blasters, and droids.'
 tagline:          '(a work in progress)'
-description:      'Lock the doors. And hope they don't have blasters.'
+description:      'Lock the doors. And hope they dont have blasters.'
 url:              http://noahschmitz.github.io
 
 author:
